# CareerPilot

./: .env.example  .git_commit_msg.txt  .gitignore  3.14开发记录.md  AGENTS.md  DEV_DOCUMENT.md  HTTPS问题报告.md  README.en.md  README.md  SETUP.md  docker-compose.middleware.yml  docker-compose.prod.yml  docker-compose.yml  zhengwenze-master-design-20260321-195147.md  岗位匹配模块开发清单.md  本地环境安装清单.md
apps/api/: .env  .env.example  README.md  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260314_0001_create_users_table.py  20260314_0003_create_resumes_tables.py  20260317_0007_add_ai_fields_to_resume_parse_jobs.py  20260318_0008_create_mock_interview_tables.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/: deps.py
apps/api/app/core/: config.py  responses.py  security.py
apps/api/app/db/: base.py
apps/api/app/models/: __init__.py  job_description.py  job_readiness_event.py  match_report.py  mixins.py  mock_interview_session.py  mock_interview_turn.py  resume.py  resume_parse_job.py  user.py  (+1 more)
apps/api/tests/: check_db.py  check_latest.py  check_resume.py  conftest.py  manual_parse.py  test_ai_client_json_parse.py  test_auth.py  test_config.py  test_direct.py  test_jobs.py  test_jobs_match_flow.py  test_match_reports.py  test_mock_interview_flow.py  test_models_metadata.py  test_profile.py  test_profile_api.py  test_profile_curl.sh  test_resume.py  test_resume_ai.py  test_resume_login.py  test_resume_optimizer.py  test_resume_optimizer_flow.py  test_resume_parse_flow.py  test_resume_parser.py  test_resume_parsing.py  test_resume_upload.py
(+392 files in other folders)
